objects/AppSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Auto_Select_Master_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Select Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_New_Amendment_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate New Amendment Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_New_Renewal_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate New Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Quote_Fields_Setup__c</fullName>
        <description>This field will store the initial field value configuration for Opportunity&apos;s New Quote button</description>
        <label>New Quote Fields Setup</label>
        <type>TextArea</type>
    </fields>
    <label>App Setting</label>
</CustomObject>